[tool.poetry]
name = "nr-wg-mtu-finder"
version = "0.3.0"
description = "Scripts to find the optimal MTU for Wireguard server and peers."
authors = ["nitred <nitish.k.reddy@gmail.com>"]

[tool.poetry.scripts]
nr-wg-mtu-finder = "nr_wg_mtu_finder.main:run"
nr-wg-mtu-finder-heatmap = "nr_wg_mtu_finder.main_heatmap:run"


[tool.poetry.dependencies]
python = ">=3.9"
pandas = "==2.2.3"
matplotlib = "==3.8.4"
seaborn = "==0.13.2"
pydantic = "==1.8.2"
requests = "==2.27.1"
flask = "==2.0.3"
werkzeug = "==2.0.3"

[tool.poetry.extras]


[tool.poetry.dev-dependencies]
black = "==22.1.0"


[tool.black]
max-line-length = 88


[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


